Removing windows build from pipeline (takes too long)